Fix z-index of back-top link

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -429,6 +429,7 @@ div.back-top {
     right:15px;
     bottom:50px;
     padding:8px 0;
+    z-index:1;
 
     a {
         position:relative;
